--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "event_people",
-  "version": "0.0.1",
-  "description": "Tool to simplify the communication of event based services.",
-  "main": "main.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "yarn test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pin-people/event_people_node.git"
-  },
-  "keywords": [
-    "event",
-    "services"
-  ],
-  "author": "Pin People",
-  "license": "LGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/pin-people/event_people_node/issues"
-  },
-  "homepage": "https://github.com/pin-people/event_people_node#readme"
+	"name": "event-people-node",
+	"version": "1.0.0",
+	"description": "Tool to simplify the communication of event based services.",
+	"directories": {
+		"test": "tests",
+		"lib": "lib"
+	},
+	"scripts": {
+		"start": "ts-node-dev --respawn  example",
+		"test": "yarn test"
+	},
+	"repository": "git+https://github.com/pin-people/event_people_node.git",
+	"keywords": [
+		"event",
+		"services"
+	],
+	"author": "Pin People",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/pin-people/event_people_node/issues"
+	},
+	"homepage": "https://github.com/pin-people/event_people_node#readme",
+	"private": false,
+	"devDependencies": {
+		"@types/amqplib": "^0.8.2",
+		"@types/jest": "^29.1.1",
+		"@types/node": "^18.8.2",
+		"eslint": "^8.24.0",
+		"jest": "^29.1.2",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^4.8.4"
+	},
+	"dependencies": {
+		"amqplib": "^0.10.3",
+		"dotenv": "^16.0.3"
+	}
 }
