--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"scripts": {
 		"start": "ts-node-dev --respawn  example",
+		"lint": "eslint \"{src,lib,test}/**/*.ts\" --fix",
 		"test": "yarn test"
 	},
 	"repository": "git+https://github.com/pin-people/event_people_node.git",
@@ -26,8 +27,13 @@
 		"@types/amqplib": "^0.8.2",
 		"@types/jest": "^29.1.1",
 		"@types/node": "^18.8.2",
-		"eslint": "^8.24.0",
+		"@typescript-eslint/eslint-plugin": "^5.40.0",
+		"@typescript-eslint/parser": "^5.40.0",
+		"eslint": "^8.25.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"jest": "^29.1.2",
+		"prettier": "^2.7.1",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.8.4"
