--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Tool to simplify the communication of event based services.",
 	"directories": {
-		"test": "tests",
+		"test": "test",
 		"lib": "lib"
 	},
 	"scripts": {
@@ -11,7 +11,7 @@
 		"example:emitter": "ts-node example/emitter",
 		"example:daemon": "ts-node example/daemon",
 		"lint": "eslint \"{src,lib,test}/**/*.ts\" --fix",
-		"test": "yarn test"
+		"test": "jest"
 	},
 	"repository": "git+https://github.com/pin-people/event_people_node.git",
 	"keywords": [
@@ -36,6 +36,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"jest": "^29.1.2",
 		"prettier": "^2.7.1",
+		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.8.4"
@@ -43,5 +44,28 @@
 	"dependencies": {
 		"amqplib": "^0.10.3",
 		"dotenv": "^16.0.3"
+	},
+	"jest": {
+		"coveragePathIgnorePatterns": [
+			"<rootDir>/migrations/",
+			"<rootDir>/config/",
+			"<rootDir>/common/dto"
+		],
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"testTimeout": 30000,
+		"rootDir": "test",
+		"testRegex": ".spec.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"roots": [
+			"../test"
+		],
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
 	}
 }
